--- a/netflix/components/Banner.css
+++ b/netflix/components/Banner.css
@@ -6,20 +6,20 @@
   background-position: top center;
   overflow: hidden;
 }
-.wrap_contents {
+.sec_banner .wrap_contents {
   height: 190px;
   margin-left: 40px;
   padding-top: 170px;
 }
-.txt_title {
+.sec_banner .txt_title {
   padding-bottom: 0.5rem;
   font-size: 3rem;
   font-weight: 800;
 }
-.wrap_btn {
+.sec_banner .wrap_btn {
   display: flex;
 }
-.btn_banner {
+.sec_banner .btn_banner {
   border: none;
   border-radius: 0.2vw;
   margin-right: 1rem;
@@ -28,24 +28,24 @@
   font-weight: 400;
   cursor: pointer;
 }
-.btn_banner:hover {
+.sec_banner .btn_banner:hover {
   color: #000;
   background-color: rgba(170, 170, 170, 0.9);
   transition: all 0.2s;
 }
-.btn_play {
+.sec_banner .btn_play {
   color: black;
   background-color: white;
 }
-.btn_more {
+.sec_banner .btn_more {
   color: white;
   background-color: rgba(109, 109, 110, 0.7);
 }
-.btn_more:hover {
+.sec_banner .btn_more:hover {
   color: white;
   background-color: rgb(74, 74, 74);
 }
-.txt_overview {
+.sec_banner .txt_overview {
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
@@ -57,44 +57,44 @@
   font-size: 1rem;
   overflow: hidden;
 }
-.sec_fade {
+.sec_banner .sec_fade {
   height: 16.5rem;
   background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
 }
 
-@media (min-width: 1500px) {
+@media screen and (min-width: 1500px) {
   .sec_banner {
     position: relative;
     height: 600px;
   }
-  .txt_overview {
+  .sec_banner .txt_overview {
     display: -webkit-box;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
   }
-  .sec_fade {
+  .sec_banner .sec_fade {
     width: 100%;
     height: 26rem;
   }
 }
-@media (max-width: 768px) {
-  .wrap_contents {
+@media screen and (max-width: 768px) {
+  .sec_banner .wrap_contents {
     width: min-content;
     margin-left: 0px;
     padding-left: 2.3rem;
   }
-  .btn_banner {
+  .sec_banner .btn_banner {
     border-radius: 4px;
     font-size: 0.8rem;
   }
-  .txt_overview {
+  .sec_banner .txt_overview {
     display: -webkit-box;
-    -webkit-line-clamp: 6;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     width: auto;
     font-size: 0.8rem;
   }
-  .btn_more {
+  .sec_banner .btn_more {
     text-align: start;
     padding-right: 1.2rem;
   }
